--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/ze0ne/virtual-kvm-nodejs/issues"
   },
-  "homepage": "https://github.com/ze0ne/virtual-kvm-nodejs#readme"
+  "homepage": "https://github.com/ze0ne/virtual-kvm-nodejs#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "socket.io": "^4.5.1"
+  }
 }
